--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/mac-and-cheese.html">Mac & Cheese Recipe</a></li>
+      <li><a href="recipes/mashed-potatoes.html">Mashed Potatoes Recipe</a></li>
     </ul>
   </body>
 </html>
