feat: add cranberry sauce recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="recipes/mac-and-cheese.html">Mac & Cheese Recipe</a></li>
       <li><a href="recipes/mashed-potatoes.html">Mashed Potatoes Recipe</a></li>
+      <li><a href="recipes/cranberry-sauce.html">Cranberry Sauce Recipe</a></li>
     </ul>
   </body>
 </html>
