feat: add description sentences

--- a/recipes/cranberry-sauce.html
+++ b/recipes/cranberry-sauce.html
@@ -13,6 +13,7 @@
     <p>Image courtesy of <a href="https://commons.wikimedia.org/wiki/File:Cranberry_sauce_%2843179168111%29.jpg"  target="_blank" rel="noreferrer">Wikimedia Commons</a></p>
     <h2>Description</h2>
     <p><em>Makes 6 servings</em></p>
+    <p>Tart and tangy! This cranberry recipe is sure to serve as the best side sauce for any dish!</p>
     <h3>Ingredients</h3>
     <ul>
       <li>2/3 cup (133 g) sugar</li>
