--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -13,6 +13,7 @@
     <p>Image courtesy of <a href="https://commons.wikimedia.org/wiki/File:Original_Mac_n_Cheese_.jpg"  target="_blank" rel="noreferrer">Wikimedia Commons</a></p>
     <h2>Description</h2>
     <p><em>Makes 8 servings</em></p>
+    <p>A go-to recipe for mac-and-cheese at home for all your family dinners!</p>
     <h3>Ingredients</h3>
     <ul>
       <li>1 lb. dried elbow pasta</li>
