--- a/recipes/mashed-potatoes.html
+++ b/recipes/mashed-potatoes.html
@@ -13,6 +13,7 @@
     <p>Image courtesy of <a href="https://commons.wikimedia.org/wiki/File:Sous_vide_mashed_potatoes.jpg"  target="_blank" rel="noreferrer">Wikimedia Commons</a></p>
     <h2>Description</h2>
     <p><em>Makes 10 servings</em></p>
+    <p>A delectable mashed potatoes recipe to satisfy that homecooked Thanksgiving craving!</p>
     <h3>Ingredients</h3>
     <ul>
       <li>4 pounds potatoes russet or Yukon gold</li>
